--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "0.27.2",
     "react": "18.2.0",
+    "react-calendar": "^3.7.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "4.4.0",
     "react-router-dom": "6.3.0",
     "react-scripts": "5.0.1",
+    "react-step-wizard": "^5.3.11",
     "web-vitals": "2.1.4"
   },
   "scripts": {
