--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-step-wizard": "5.3.11",
     "redux": "4.2.0",
+    "redux-logger": "3.0.6",
     "web-vitals": "2.1.4"
   },
   "scripts": {
