--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-step-wizard": "5.3.11",
     "redux": "4.2.0",
     "redux-logger": "3.0.6",
+    "redux-persist": "6.0.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
