--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "redux": "4.2.0",
     "redux-logger": "3.0.6",
     "redux-persist": "6.0.0",
+    "redux-saga": "1.2.1",
+    "reduxsauce": "1.2.1",
     "web-vitals": "2.1.4"
   },
   "scripts": {
