--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux-persist": "6.0.0",
     "redux-saga": "1.2.1",
     "reduxsauce": "1.2.1",
+    "uuid": "9.0.0",
     "web-vitals": "2.1.4"
   },
   "scripts": {
