--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "redux-persist": "6.0.0",
     "redux-saga": "1.2.1",
     "reduxsauce": "1.2.1",
+    "sass": "1.49.8",
+    "swiper": "8.0.6",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4"
   },
