--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux-saga": "1.2.1",
     "reduxsauce": "1.2.1",
     "sass": "1.49.8",
+    "stripe": "11.7.0",
     "swiper": "8.0.6",
     "uuid": "9.0.0",
     "web-vitals": "2.1.4"
